Shader Editor in Simplified Chinese Search cannot find vector Math(矢量运算) node #106427

Closed
opened 2023-04-01 14:10:30 +02:00 by 周建峰 · 1 comment

System Information
Operating system:win11
Graphics card:6800xt

Blender Version
Broken: 3.4/3.5
Worked: 3.3

Short description of error

Exact steps for others to reproduce the error
Shader Editor in Simplified Chinese Search cannot find vector Math(矢量数学) node!

**System Information** Operating system:win11 Graphics card:6800xt **Blender Version** Broken: 3.4/3.5 Worked: 3.3 **Short description of error** **Exact steps for others to reproduce the error** Shader Editor in Simplified Chinese Search cannot find vector Math(矢量数学) node!
周建峰 added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-01 14:10:30 +02:00
Blender Bot added the
Status
Archived
label 2023-04-01 14:11:45 +02:00
Iliya Katushenock added the
Interest
Nodes & Physics
label 2023-04-01 14:11:45 +02:00
Blender Bot removed the
Status
Needs Triage
label 2023-04-01 14:11:45 +02:00
Iliya Katushenock added the
Interest
Translations
Interest
User Interface
labels 2023-04-01 14:11:46 +02:00
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-04-01 14:13:50 +02:00
周建峰 changed title from Shader Editor in Simplified Chinese Search cannot find vector Math(矢量数学) node to Shader Editor in Simplified Chinese Search cannot find vector Math(矢量运算) node 2023-04-01 14:15:55 +02:00
Member

Confirmed, in zh_CN.po line 47256:

msgctxt "NodeTree"    <----- Should remove the msgctxt for this entry.
msgid "Vector Math"
msgstr "矢量运算"

This causes translation to be lost in the search context.

Or, search operator should also have msgctxt of NodeTree.

图片

Confirmed, in `zh_CN.po` line 47256: ``` msgctxt "NodeTree" <----- Should remove the msgctxt for this entry. msgid "Vector Math" msgstr "矢量运算" ``` This causes translation to be lost in the search context. Or, search operator should also have msgctxt of `NodeTree`. ![图片](/attachments/82d9b592-08b2-4caa-91a6-3348b45e3c75)
YimingWu added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-02 09:32:14 +02:00
Iliya Katushenock added
Module
User Interface
and removed
Interest
User Interface
labels 2023-04-02 12:32:10 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-12 12:02:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106427
No description provided.